5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1674_1100.log
== TEST (2019-05-02 00:38:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Digite o valor da celula:"))
print ("Entrada:",x)

-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:38:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Digite o valor da cedula:"))
print ("Entrada:",x)

-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:44:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Digite o valor da cedula:"))
print ("Entrada:",x)
if (x>0):
	if(x==2):
		print("Animal: Tartaruga")
	elif(x==5):
		print("Animal: Garca")
	elif(x==10):
		print("Animal: Arara")
	elif(x==20):
		print("Animal: Mico-leao-dourado")
	elif(x==50):
		print("Animal: Onca-pintada")
	else(x==100):
		print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- ERROR:
File "XXXX", line 17
    else(x==100):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:45:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Digite o valor da cedula:"))
print ("Entrada:",x)
if (x>0):
	if(x==2):
		print("Animal: Tartaruga")
	elif(x==5):
		print("Animal: Garca")
	elif(x==10):
		print("Animal: Arara")
	elif(x==20):
		print("Animal: Mico-leao-dourado")
	elif(x==50):
		print("Animal: Onca-pintada")
	elif(x==100):
		print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:45:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Digite o valor da cedula:"))
print ("Entrada:",x)
if (x>0):
	if(x==2):
		print("Animal: Tartaruga")
	elif(x==5):
		print("Animal: Garca")
	elif(x==10):
		print("Animal: Arara")
	elif(x==20):
		print("Animal: Mico-leao-dourado")
	elif(x==50):
		print("Animal: Onca-pintada")
	elif(x==100):
		print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.149262
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:45:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Digite o valor da cedula:"))
print ("Entrada:",x)
if (x>0):
	if(x==2):
		print("Animal: Tartaruga")
	elif(x==5):
		print("Animal: Garca")
	elif(x==10):
		print("Animal: Arara")
	elif(x==20):
		print("Animal: Mico-leao-dourado")
	elif(x==50):
		print("Animal: Onca-pintada")
	else:
		print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:46:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Digite o valor da cedula:"))
print ("Entrada:",x)
if (x>0):
	if(x==2):
		print("Animal: Tartaruga")
	elif(x==5):
		print("Animal: Garca")
	elif(x==10):
		print("Animal: Arara")
	elif(x==20):
		print("Animal: Mico-leao-dourado")
	elif(x==50):
		print("Animal: Onca-pintada")
	else:
		print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.141723
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Garoupa
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:48:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Digite o valor da cedula:"))
print ("Entrada:",x)
if (x>0):
	if(x==2):
		print("Animal: Tartaruga")
	elif(x==5):
		print("Animal: Garca")
	elif(x==10):
		print("Animal: Arara")
	elif(x==20):
		print("Animal: Mico-leao-dourado")
	elif(x==50):
		print("Animal: Onca-pintada")
	else:
		print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:49:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Digite o valor da cedula:"))
print ("Entrada:",x)
if (x>0):
	if(x==2):
		print("Animal: Tartaruga")
	elif(x==5):
		print("Animal: Garca")
	elif(x==10):
		print("Animal: Arara")
	elif(x==20):
		print("Animal: Mico-leao-dourado")
	elif(x==50):
		print("Animal: Onca-pintada")
	elif(x==100)
		print("Animal: Garoupa")
	else:
		print("Animal: invalido")
else:
	print("Animal: Invalido")
-- ERROR:
File "XXXX", line 17
    elif(x==100)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:49:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Digite o valor da cedula:"))
print ("Entrada:",x)
if (x>0):
	if(x==2):
		print("Animal: Tartaruga")
	elif(x==5):
		print("Animal: Garca")
	elif(x==10):
		print("Animal: Arara")
	elif(x==20):
		print("Animal: Mico-leao-dourado")
	elif(x==50):
		print("Animal: Onca-pintada")
	elif(x==100):
		print("Animal: Garoupa")
	else:
		print("Animal: invalido")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:49:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Digite o valor da cedula:"))
print ("Entrada:",x)
if (x>0):
	if(x==2):
		print("Animal: Tartaruga")
	elif(x==5):
		print("Animal: Garca")
	elif(x==10):
		print("Animal: Arara")
	elif(x==20):
		print("Animal: Mico-leao-dourado")
	elif(x==50):
		print("Animal: Onca-pintada")
	elif(x==100):
		print("Animal: Garoupa")
	else:
		print("Animal: invalido")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.170381
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:51:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Digite o valor da cedula:"))
print ("Entrada:",x)
if (x>0):
	if(x==2):
		print("Animal: Tartaruga")
	elif(x==5):
		print("Animal: Garca")
	elif(x==10):
		print("Animal: Arara")
	elif(x==20):
		print("Animal: Mico-leao-dourado")
	elif(x==50):
		print("Animal: Onca-pintada")
	elif(x==100):
		print("Animal: Garoupa")
	else:
		print("Animal: invalido")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.190673
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:51:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Digite o valor da cedula:"))
print ("Entrada:",x)
if (x>0):
	if(x==2):
		print("Animal: Tartaruga")
	elif(x==5):
		print("Animal: Garca")
	elif(x==10):
		print("Animal: Arara")
	elif(x==20):
		print("Animal: Mico-leao-dourado")
	elif(x==50):
		print("Animal: Onca-pintada")
	elif(x==100):
		print("Animal: Garoupa")
	else:
		print("Animal: invalido")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.149351
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:51:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Digite o valor da cedula:"))
print ("Entrada:",x)
if (x>0):
	if(x==2):
		print("Animal: Tartaruga")
	elif(x==5):
		print("Animal: Garca")
	elif(x==10):
		print("Animal: Arara")
	elif(x==20):
		print("Animal: Mico-leao-dourado")
	elif(x==50):
		print("Animal: Onca-pintada")
	elif(x==100):
		print("Animal: Garoupa")
	else:
		print("Animal: invalido")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:54:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Digite o valor da cedula:"))
print ("Entrada:",x)
if (x>0):
	if(x==2):
		print("Animal: Tartaruga")
	elif(x==5):
		print("Animal: Garca")
	elif(x==10):
		print("Animal: Arara")
	elif(x==20):
		print("Animal: Mico-leao-dourado")
	elif(x==50):
		print("Animal: Onca-pintada")
	elif(x==100):
		print("Animal: Garoupa")
	else:
		print("Animal: Invalido")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.141195
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
